# Zebrafish_webapp

./: .gitignore  README.md  app.py  length.py  requirements-dev.txt  requirements.txt  scalebar.py  seg.py  seg_helper.py
.github/workflows/: deploy-to-hf.yml
tests/: conftest.py  test_dependency_installer.py  test_export.py  test_length.py  test_logic.py  test_logic_manual.py  test_manual.py  test_overlay.py  test_seg.py  test_zoom_view.py
zebrafish_analysis/core/: manual.py  scalebar.py  seg.py  seg_helper.py
zebrafish_analysis/slicer_extension/: CMakeLists.txt  README.md  ZebrafishAnalysis.s4ext
zebrafish_analysis/slicer_extension/ZebrafishAnalysis/: CMakeLists.txt  ZebrafishAnalysis.py
zebrafish_analysis/slicer_extension/ZebrafishAnalysis/Testing/: CMakeLists.txt
zebrafish_analysis/slicer_extension/ZebrafishAnalysis/ZebrafishAnalysisLib/: dependency_installer.py  detail_tab.py  exclude_tab.py  export.py  gallery_tab.py  logic.py  overlay.py  results_tab.py  widget.py  zoom_view.py
zebrafish_analysis/webapp/: app.py
